PRINCIPAL/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> COMMENT importDeclare block
Rule 2     block -> varDeclare procedureDeclare statement
Rule 3     importDeclare -> IMPORT DOC SEMMICOLOM importDeclare
Rule 4     importDeclare -> empty
Rule 5     varDeclare -> DECLARE varDeclareList SEMMICOLOM varDeclare
Rule 6     varDeclare -> empty
Rule 7     varDeclareList -> ID
Rule 8     varDeclareList -> varDeclareList COMMA ID
Rule 9     varDeclareList -> ID ASSIGN NUMBER
Rule 10    varDeclareList -> varDeclareList COMMA ID ASSIGN NUMBER
Rule 11    procedureDeclare -> PROCEDURE ID LPAREN parameter RPAREN BEGIN block END SEMMICOLOM procedureDeclare
Rule 12    procedureDeclare -> empty
Rule 13    parameter -> factor
Rule 14    parameter -> parameter COMMA factor
Rule 15    parameter -> empty
Rule 16    statement -> CALL ID LPAREN parameter RPAREN SEMMICOLOM statement
Rule 17    statement -> ID ASSIGN expression SEMMICOLOM statement
Rule 18    statement -> empty
Rule 19    statement -> FOR NUMBER LOOPS statement END SEMMICOLOM statement
Rule 20    statement -> CASE caseList ELSE statement END SEMMICOLOM statement
Rule 21    statement -> ID ASSIGN CALL ID LPAREN parameter RPAREN SEMMICOLOM statement
Rule 22    caseList -> WHEN condition THEN statement
Rule 23    caseList -> WHEN condition THEN statement caseList
Rule 24    condition -> expression relation expression
Rule 25    relation -> EQUAL
Rule 26    relation -> GT
Rule 27    relation -> GTE
Rule 28    relation -> LT
Rule 29    relation -> LTE
Rule 30    expression -> term
Rule 31    expression -> addOperator term
Rule 32    expression -> expression addOperator term
Rule 33    addOperator -> PLUS
Rule 34    addOperator -> MINUS
Rule 35    term -> factor
Rule 36    term -> term multiOperator factor
Rule 37    multiOperator -> TIMES
Rule 38    multiOperator -> DIVIDE
Rule 39    factor -> ID
Rule 40    factor -> NUMBER
Rule 41    factor -> LPAREN expression RPAREN
Rule 42    empty -> <empty>

Terminals, with rules where they appear

ASSIGN               : 9 10 17 21
BEGIN                : 11
CALL                 : 16 21
CASE                 : 20
COMMA                : 8 10 14
COMMENT              : 1
DECLARE              : 5
DIVIDE               : 38
DOC                  : 3
ELSE                 : 20
END                  : 11 19 20
EQUAL                : 25
FOR                  : 19
GT                   : 26
GTE                  : 27
ID                   : 7 8 9 10 11 16 17 21 21 39
IMPORT               : 3
LOOPS                : 19
LPAREN               : 11 16 21 41
LT                   : 28
LTE                  : 29
MINUS                : 34
NUMBER               : 9 10 19 40
PLUS                 : 33
PROCEDURE            : 11
RPAREN               : 11 16 21 41
SEMMICOLOM           : 3 5 11 16 17 19 20 21
THEN                 : 22 23
TIMES                : 37
WHEN                 : 22 23
error                : 

Nonterminals, with rules where they appear

addOperator          : 31 32
block                : 1 11
caseList             : 20 23
condition            : 22 23
empty                : 4 6 12 15 18
expression           : 17 24 24 32 41
factor               : 13 14 35 36
importDeclare        : 1 3
multiOperator        : 36
parameter            : 11 14 16 21
procedureDeclare     : 2 11
program              : 0
relation             : 24
statement            : 2 16 17 19 19 20 20 21 22 23
term                 : 30 31 32 36
varDeclare           : 2 5
varDeclareList       : 5 8 10

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . COMMENT importDeclare block

    COMMENT         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> COMMENT . importDeclare block
    (3) importDeclare -> . IMPORT DOC SEMMICOLOM importDeclare
    (4) importDeclare -> . empty
    (42) empty -> .

    IMPORT          shift and go to state 4
    DECLARE         reduce using rule 42 (empty -> .)
    PROCEDURE       reduce using rule 42 (empty -> .)
    CALL            reduce using rule 42 (empty -> .)
    ID              reduce using rule 42 (empty -> .)
    FOR             reduce using rule 42 (empty -> .)
    CASE            reduce using rule 42 (empty -> .)
    $end            reduce using rule 42 (empty -> .)

    importDeclare                  shift and go to state 3
    empty                          shift and go to state 5

state 3

    (1) program -> COMMENT importDeclare . block
    (2) block -> . varDeclare procedureDeclare statement
    (5) varDeclare -> . DECLARE varDeclareList SEMMICOLOM varDeclare
    (6) varDeclare -> . empty
    (42) empty -> .

    DECLARE         shift and go to state 8
    PROCEDURE       reduce using rule 42 (empty -> .)
    CALL            reduce using rule 42 (empty -> .)
    ID              reduce using rule 42 (empty -> .)
    FOR             reduce using rule 42 (empty -> .)
    CASE            reduce using rule 42 (empty -> .)
    $end            reduce using rule 42 (empty -> .)

    block                          shift and go to state 6
    varDeclare                     shift and go to state 7
    empty                          shift and go to state 9

state 4

    (3) importDeclare -> IMPORT . DOC SEMMICOLOM importDeclare

    DOC             shift and go to state 10


state 5

    (4) importDeclare -> empty .

    DECLARE         reduce using rule 4 (importDeclare -> empty .)
    PROCEDURE       reduce using rule 4 (importDeclare -> empty .)
    CALL            reduce using rule 4 (importDeclare -> empty .)
    ID              reduce using rule 4 (importDeclare -> empty .)
    FOR             reduce using rule 4 (importDeclare -> empty .)
    CASE            reduce using rule 4 (importDeclare -> empty .)
    $end            reduce using rule 4 (importDeclare -> empty .)


state 6

    (1) program -> COMMENT importDeclare block .

    $end            reduce using rule 1 (program -> COMMENT importDeclare block .)


state 7

    (2) block -> varDeclare . procedureDeclare statement
    (11) procedureDeclare -> . PROCEDURE ID LPAREN parameter RPAREN BEGIN block END SEMMICOLOM procedureDeclare
    (12) procedureDeclare -> . empty
    (42) empty -> .

    PROCEDURE       shift and go to state 12
    CALL            reduce using rule 42 (empty -> .)
    ID              reduce using rule 42 (empty -> .)
    FOR             reduce using rule 42 (empty -> .)
    CASE            reduce using rule 42 (empty -> .)
    $end            reduce using rule 42 (empty -> .)
    END             reduce using rule 42 (empty -> .)

    procedureDeclare               shift and go to state 11
    empty                          shift and go to state 13

state 8

    (5) varDeclare -> DECLARE . varDeclareList SEMMICOLOM varDeclare
    (7) varDeclareList -> . ID
    (8) varDeclareList -> . varDeclareList COMMA ID
    (9) varDeclareList -> . ID ASSIGN NUMBER
    (10) varDeclareList -> . varDeclareList COMMA ID ASSIGN NUMBER

    ID              shift and go to state 15

    varDeclareList                 shift and go to state 14

state 9

    (6) varDeclare -> empty .

    PROCEDURE       reduce using rule 6 (varDeclare -> empty .)
    CALL            reduce using rule 6 (varDeclare -> empty .)
    ID              reduce using rule 6 (varDeclare -> empty .)
    FOR             reduce using rule 6 (varDeclare -> empty .)
    CASE            reduce using rule 6 (varDeclare -> empty .)
    $end            reduce using rule 6 (varDeclare -> empty .)
    END             reduce using rule 6 (varDeclare -> empty .)


state 10

    (3) importDeclare -> IMPORT DOC . SEMMICOLOM importDeclare

    SEMMICOLOM      shift and go to state 16


state 11

    (2) block -> varDeclare procedureDeclare . statement
    (16) statement -> . CALL ID LPAREN parameter RPAREN SEMMICOLOM statement
    (17) statement -> . ID ASSIGN expression SEMMICOLOM statement
    (18) statement -> . empty
    (19) statement -> . FOR NUMBER LOOPS statement END SEMMICOLOM statement
    (20) statement -> . CASE caseList ELSE statement END SEMMICOLOM statement
    (21) statement -> . ID ASSIGN CALL ID LPAREN parameter RPAREN SEMMICOLOM statement
    (42) empty -> .

    CALL            shift and go to state 18
    ID              shift and go to state 19
    FOR             shift and go to state 21
    CASE            shift and go to state 22
    $end            reduce using rule 42 (empty -> .)
    END             reduce using rule 42 (empty -> .)

    statement                      shift and go to state 17
    empty                          shift and go to state 20

state 12

    (11) procedureDeclare -> PROCEDURE . ID LPAREN parameter RPAREN BEGIN block END SEMMICOLOM procedureDeclare

    ID              shift and go to state 23


state 13

    (12) procedureDeclare -> empty .

    CALL            reduce using rule 12 (procedureDeclare -> empty .)
    ID              reduce using rule 12 (procedureDeclare -> empty .)
    FOR             reduce using rule 12 (procedureDeclare -> empty .)
    CASE            reduce using rule 12 (procedureDeclare -> empty .)
    $end            reduce using rule 12 (procedureDeclare -> empty .)
    END             reduce using rule 12 (procedureDeclare -> empty .)


state 14

    (5) varDeclare -> DECLARE varDeclareList . SEMMICOLOM varDeclare
    (8) varDeclareList -> varDeclareList . COMMA ID
    (10) varDeclareList -> varDeclareList . COMMA ID ASSIGN NUMBER

    SEMMICOLOM      shift and go to state 24
    COMMA           shift and go to state 25


state 15

    (7) varDeclareList -> ID .
    (9) varDeclareList -> ID . ASSIGN NUMBER

    SEMMICOLOM      reduce using rule 7 (varDeclareList -> ID .)
    COMMA           reduce using rule 7 (varDeclareList -> ID .)
    ASSIGN          shift and go to state 26


state 16

    (3) importDeclare -> IMPORT DOC SEMMICOLOM . importDeclare
    (3) importDeclare -> . IMPORT DOC SEMMICOLOM importDeclare
    (4) importDeclare -> . empty
    (42) empty -> .

    IMPORT          shift and go to state 4
    DECLARE         reduce using rule 42 (empty -> .)
    PROCEDURE       reduce using rule 42 (empty -> .)
    CALL            reduce using rule 42 (empty -> .)
    ID              reduce using rule 42 (empty -> .)
    FOR             reduce using rule 42 (empty -> .)
    CASE            reduce using rule 42 (empty -> .)
    $end            reduce using rule 42 (empty -> .)

    importDeclare                  shift and go to state 27
    empty                          shift and go to state 5

state 17

    (2) block -> varDeclare procedureDeclare statement .

    $end            reduce using rule 2 (block -> varDeclare procedureDeclare statement .)
    END             reduce using rule 2 (block -> varDeclare procedureDeclare statement .)


state 18

    (16) statement -> CALL . ID LPAREN parameter RPAREN SEMMICOLOM statement

    ID              shift and go to state 28


state 19

    (17) statement -> ID . ASSIGN expression SEMMICOLOM statement
    (21) statement -> ID . ASSIGN CALL ID LPAREN parameter RPAREN SEMMICOLOM statement

    ASSIGN          shift and go to state 29


state 20

    (18) statement -> empty .

    $end            reduce using rule 18 (statement -> empty .)
    END             reduce using rule 18 (statement -> empty .)
    WHEN            reduce using rule 18 (statement -> empty .)
    ELSE            reduce using rule 18 (statement -> empty .)


state 21

    (19) statement -> FOR . NUMBER LOOPS statement END SEMMICOLOM statement

    NUMBER          shift and go to state 30


state 22

    (20) statement -> CASE . caseList ELSE statement END SEMMICOLOM statement
    (22) caseList -> . WHEN condition THEN statement
    (23) caseList -> . WHEN condition THEN statement caseList

    WHEN            shift and go to state 32

    caseList                       shift and go to state 31

state 23

    (11) procedureDeclare -> PROCEDURE ID . LPAREN parameter RPAREN BEGIN block END SEMMICOLOM procedureDeclare

    LPAREN          shift and go to state 33


state 24

    (5) varDeclare -> DECLARE varDeclareList SEMMICOLOM . varDeclare
    (5) varDeclare -> . DECLARE varDeclareList SEMMICOLOM varDeclare
    (6) varDeclare -> . empty
    (42) empty -> .

    DECLARE         shift and go to state 8
    PROCEDURE       reduce using rule 42 (empty -> .)
    CALL            reduce using rule 42 (empty -> .)
    ID              reduce using rule 42 (empty -> .)
    FOR             reduce using rule 42 (empty -> .)
    CASE            reduce using rule 42 (empty -> .)
    $end            reduce using rule 42 (empty -> .)
    END             reduce using rule 42 (empty -> .)

    varDeclare                     shift and go to state 34
    empty                          shift and go to state 9

state 25

    (8) varDeclareList -> varDeclareList COMMA . ID
    (10) varDeclareList -> varDeclareList COMMA . ID ASSIGN NUMBER

    ID              shift and go to state 35


state 26

    (9) varDeclareList -> ID ASSIGN . NUMBER

    NUMBER          shift and go to state 36


state 27

    (3) importDeclare -> IMPORT DOC SEMMICOLOM importDeclare .

    DECLARE         reduce using rule 3 (importDeclare -> IMPORT DOC SEMMICOLOM importDeclare .)
    PROCEDURE       reduce using rule 3 (importDeclare -> IMPORT DOC SEMMICOLOM importDeclare .)
    CALL            reduce using rule 3 (importDeclare -> IMPORT DOC SEMMICOLOM importDeclare .)
    ID              reduce using rule 3 (importDeclare -> IMPORT DOC SEMMICOLOM importDeclare .)
    FOR             reduce using rule 3 (importDeclare -> IMPORT DOC SEMMICOLOM importDeclare .)
    CASE            reduce using rule 3 (importDeclare -> IMPORT DOC SEMMICOLOM importDeclare .)
    $end            reduce using rule 3 (importDeclare -> IMPORT DOC SEMMICOLOM importDeclare .)


state 28

    (16) statement -> CALL ID . LPAREN parameter RPAREN SEMMICOLOM statement

    LPAREN          shift and go to state 37


state 29

    (17) statement -> ID ASSIGN . expression SEMMICOLOM statement
    (21) statement -> ID ASSIGN . CALL ID LPAREN parameter RPAREN SEMMICOLOM statement
    (30) expression -> . term
    (31) expression -> . addOperator term
    (32) expression -> . expression addOperator term
    (35) term -> . factor
    (36) term -> . term multiOperator factor
    (33) addOperator -> . PLUS
    (34) addOperator -> . MINUS
    (39) factor -> . ID
    (40) factor -> . NUMBER
    (41) factor -> . LPAREN expression RPAREN

    CALL            shift and go to state 40
    PLUS            shift and go to state 45
    MINUS           shift and go to state 46
    ID              shift and go to state 38
    NUMBER          shift and go to state 47
    LPAREN          shift and go to state 41

    expression                     shift and go to state 39
    term                           shift and go to state 42
    addOperator                    shift and go to state 43
    factor                         shift and go to state 44

state 30

    (19) statement -> FOR NUMBER . LOOPS statement END SEMMICOLOM statement

    LOOPS           shift and go to state 48


state 31

    (20) statement -> CASE caseList . ELSE statement END SEMMICOLOM statement

    ELSE            shift and go to state 49


state 32

    (22) caseList -> WHEN . condition THEN statement
    (23) caseList -> WHEN . condition THEN statement caseList
    (24) condition -> . expression relation expression
    (30) expression -> . term
    (31) expression -> . addOperator term
    (32) expression -> . expression addOperator term
    (35) term -> . factor
    (36) term -> . term multiOperator factor
    (33) addOperator -> . PLUS
    (34) addOperator -> . MINUS
    (39) factor -> . ID
    (40) factor -> . NUMBER
    (41) factor -> . LPAREN expression RPAREN

    PLUS            shift and go to state 45
    MINUS           shift and go to state 46
    ID              shift and go to state 38
    NUMBER          shift and go to state 47
    LPAREN          shift and go to state 41

    condition                      shift and go to state 50
    expression                     shift and go to state 51
    term                           shift and go to state 42
    addOperator                    shift and go to state 43
    factor                         shift and go to state 44

state 33

    (11) procedureDeclare -> PROCEDURE ID LPAREN . parameter RPAREN BEGIN block END SEMMICOLOM procedureDeclare
    (13) parameter -> . factor
    (14) parameter -> . parameter COMMA factor
    (15) parameter -> . empty
    (39) factor -> . ID
    (40) factor -> . NUMBER
    (41) factor -> . LPAREN expression RPAREN
    (42) empty -> .

    ID              shift and go to state 38
    NUMBER          shift and go to state 47
    LPAREN          shift and go to state 41
    RPAREN          reduce using rule 42 (empty -> .)
    COMMA           reduce using rule 42 (empty -> .)

    parameter                      shift and go to state 52
    factor                         shift and go to state 53
    empty                          shift and go to state 54

state 34

    (5) varDeclare -> DECLARE varDeclareList SEMMICOLOM varDeclare .

    PROCEDURE       reduce using rule 5 (varDeclare -> DECLARE varDeclareList SEMMICOLOM varDeclare .)
    CALL            reduce using rule 5 (varDeclare -> DECLARE varDeclareList SEMMICOLOM varDeclare .)
    ID              reduce using rule 5 (varDeclare -> DECLARE varDeclareList SEMMICOLOM varDeclare .)
    FOR             reduce using rule 5 (varDeclare -> DECLARE varDeclareList SEMMICOLOM varDeclare .)
    CASE            reduce using rule 5 (varDeclare -> DECLARE varDeclareList SEMMICOLOM varDeclare .)
    $end            reduce using rule 5 (varDeclare -> DECLARE varDeclareList SEMMICOLOM varDeclare .)
    END             reduce using rule 5 (varDeclare -> DECLARE varDeclareList SEMMICOLOM varDeclare .)


state 35

    (8) varDeclareList -> varDeclareList COMMA ID .
    (10) varDeclareList -> varDeclareList COMMA ID . ASSIGN NUMBER

    SEMMICOLOM      reduce using rule 8 (varDeclareList -> varDeclareList COMMA ID .)
    COMMA           reduce using rule 8 (varDeclareList -> varDeclareList COMMA ID .)
    ASSIGN          shift and go to state 55


state 36

    (9) varDeclareList -> ID ASSIGN NUMBER .

    SEMMICOLOM      reduce using rule 9 (varDeclareList -> ID ASSIGN NUMBER .)
    COMMA           reduce using rule 9 (varDeclareList -> ID ASSIGN NUMBER .)


state 37

    (16) statement -> CALL ID LPAREN . parameter RPAREN SEMMICOLOM statement
    (13) parameter -> . factor
    (14) parameter -> . parameter COMMA factor
    (15) parameter -> . empty
    (39) factor -> . ID
    (40) factor -> . NUMBER
    (41) factor -> . LPAREN expression RPAREN
    (42) empty -> .

    ID              shift and go to state 38
    NUMBER          shift and go to state 47
    LPAREN          shift and go to state 41
    RPAREN          reduce using rule 42 (empty -> .)
    COMMA           reduce using rule 42 (empty -> .)

    parameter                      shift and go to state 56
    factor                         shift and go to state 53
    empty                          shift and go to state 54

state 38

    (39) factor -> ID .

    TIMES           reduce using rule 39 (factor -> ID .)
    DIVIDE          reduce using rule 39 (factor -> ID .)
    SEMMICOLOM      reduce using rule 39 (factor -> ID .)
    PLUS            reduce using rule 39 (factor -> ID .)
    MINUS           reduce using rule 39 (factor -> ID .)
    EQUAL           reduce using rule 39 (factor -> ID .)
    GT              reduce using rule 39 (factor -> ID .)
    GTE             reduce using rule 39 (factor -> ID .)
    LT              reduce using rule 39 (factor -> ID .)
    LTE             reduce using rule 39 (factor -> ID .)
    RPAREN          reduce using rule 39 (factor -> ID .)
    COMMA           reduce using rule 39 (factor -> ID .)
    THEN            reduce using rule 39 (factor -> ID .)


state 39

    (17) statement -> ID ASSIGN expression . SEMMICOLOM statement
    (32) expression -> expression . addOperator term
    (33) addOperator -> . PLUS
    (34) addOperator -> . MINUS

    SEMMICOLOM      shift and go to state 57
    PLUS            shift and go to state 45
    MINUS           shift and go to state 46

    addOperator                    shift and go to state 58

state 40

    (21) statement -> ID ASSIGN CALL . ID LPAREN parameter RPAREN SEMMICOLOM statement

    ID              shift and go to state 59


state 41

    (41) factor -> LPAREN . expression RPAREN
    (30) expression -> . term
    (31) expression -> . addOperator term
    (32) expression -> . expression addOperator term
    (35) term -> . factor
    (36) term -> . term multiOperator factor
    (33) addOperator -> . PLUS
    (34) addOperator -> . MINUS
    (39) factor -> . ID
    (40) factor -> . NUMBER
    (41) factor -> . LPAREN expression RPAREN

    PLUS            shift and go to state 45
    MINUS           shift and go to state 46
    ID              shift and go to state 38
    NUMBER          shift and go to state 47
    LPAREN          shift and go to state 41

    expression                     shift and go to state 60
    term                           shift and go to state 42
    addOperator                    shift and go to state 43
    factor                         shift and go to state 44

state 42

    (30) expression -> term .
    (36) term -> term . multiOperator factor
    (37) multiOperator -> . TIMES
    (38) multiOperator -> . DIVIDE

    SEMMICOLOM      reduce using rule 30 (expression -> term .)
    PLUS            reduce using rule 30 (expression -> term .)
    MINUS           reduce using rule 30 (expression -> term .)
    EQUAL           reduce using rule 30 (expression -> term .)
    GT              reduce using rule 30 (expression -> term .)
    GTE             reduce using rule 30 (expression -> term .)
    LT              reduce using rule 30 (expression -> term .)
    LTE             reduce using rule 30 (expression -> term .)
    RPAREN          reduce using rule 30 (expression -> term .)
    THEN            reduce using rule 30 (expression -> term .)
    TIMES           shift and go to state 62
    DIVIDE          shift and go to state 63

    multiOperator                  shift and go to state 61

state 43

    (31) expression -> addOperator . term
    (35) term -> . factor
    (36) term -> . term multiOperator factor
    (39) factor -> . ID
    (40) factor -> . NUMBER
    (41) factor -> . LPAREN expression RPAREN

    ID              shift and go to state 38
    NUMBER          shift and go to state 47
    LPAREN          shift and go to state 41

    term                           shift and go to state 64
    factor                         shift and go to state 44

state 44

    (35) term -> factor .

    TIMES           reduce using rule 35 (term -> factor .)
    DIVIDE          reduce using rule 35 (term -> factor .)
    SEMMICOLOM      reduce using rule 35 (term -> factor .)
    PLUS            reduce using rule 35 (term -> factor .)
    MINUS           reduce using rule 35 (term -> factor .)
    EQUAL           reduce using rule 35 (term -> factor .)
    GT              reduce using rule 35 (term -> factor .)
    GTE             reduce using rule 35 (term -> factor .)
    LT              reduce using rule 35 (term -> factor .)
    LTE             reduce using rule 35 (term -> factor .)
    RPAREN          reduce using rule 35 (term -> factor .)
    THEN            reduce using rule 35 (term -> factor .)


state 45

    (33) addOperator -> PLUS .

    ID              reduce using rule 33 (addOperator -> PLUS .)
    NUMBER          reduce using rule 33 (addOperator -> PLUS .)
    LPAREN          reduce using rule 33 (addOperator -> PLUS .)


state 46

    (34) addOperator -> MINUS .

    ID              reduce using rule 34 (addOperator -> MINUS .)
    NUMBER          reduce using rule 34 (addOperator -> MINUS .)
    LPAREN          reduce using rule 34 (addOperator -> MINUS .)


state 47

    (40) factor -> NUMBER .

    TIMES           reduce using rule 40 (factor -> NUMBER .)
    DIVIDE          reduce using rule 40 (factor -> NUMBER .)
    SEMMICOLOM      reduce using rule 40 (factor -> NUMBER .)
    PLUS            reduce using rule 40 (factor -> NUMBER .)
    MINUS           reduce using rule 40 (factor -> NUMBER .)
    EQUAL           reduce using rule 40 (factor -> NUMBER .)
    GT              reduce using rule 40 (factor -> NUMBER .)
    GTE             reduce using rule 40 (factor -> NUMBER .)
    LT              reduce using rule 40 (factor -> NUMBER .)
    LTE             reduce using rule 40 (factor -> NUMBER .)
    RPAREN          reduce using rule 40 (factor -> NUMBER .)
    COMMA           reduce using rule 40 (factor -> NUMBER .)
    THEN            reduce using rule 40 (factor -> NUMBER .)


state 48

    (19) statement -> FOR NUMBER LOOPS . statement END SEMMICOLOM statement
    (16) statement -> . CALL ID LPAREN parameter RPAREN SEMMICOLOM statement
    (17) statement -> . ID ASSIGN expression SEMMICOLOM statement
    (18) statement -> . empty
    (19) statement -> . FOR NUMBER LOOPS statement END SEMMICOLOM statement
    (20) statement -> . CASE caseList ELSE statement END SEMMICOLOM statement
    (21) statement -> . ID ASSIGN CALL ID LPAREN parameter RPAREN SEMMICOLOM statement
    (42) empty -> .

    CALL            shift and go to state 18
    ID              shift and go to state 19
    FOR             shift and go to state 21
    CASE            shift and go to state 22
    END             reduce using rule 42 (empty -> .)

    statement                      shift and go to state 65
    empty                          shift and go to state 20

state 49

    (20) statement -> CASE caseList ELSE . statement END SEMMICOLOM statement
    (16) statement -> . CALL ID LPAREN parameter RPAREN SEMMICOLOM statement
    (17) statement -> . ID ASSIGN expression SEMMICOLOM statement
    (18) statement -> . empty
    (19) statement -> . FOR NUMBER LOOPS statement END SEMMICOLOM statement
    (20) statement -> . CASE caseList ELSE statement END SEMMICOLOM statement
    (21) statement -> . ID ASSIGN CALL ID LPAREN parameter RPAREN SEMMICOLOM statement
    (42) empty -> .

    CALL            shift and go to state 18
    ID              shift and go to state 19
    FOR             shift and go to state 21
    CASE            shift and go to state 22
    END             reduce using rule 42 (empty -> .)

    statement                      shift and go to state 66
    empty                          shift and go to state 20

state 50

    (22) caseList -> WHEN condition . THEN statement
    (23) caseList -> WHEN condition . THEN statement caseList

    THEN            shift and go to state 67


state 51

    (24) condition -> expression . relation expression
    (32) expression -> expression . addOperator term
    (25) relation -> . EQUAL
    (26) relation -> . GT
    (27) relation -> . GTE
    (28) relation -> . LT
    (29) relation -> . LTE
    (33) addOperator -> . PLUS
    (34) addOperator -> . MINUS

    EQUAL           shift and go to state 69
    GT              shift and go to state 70
    GTE             shift and go to state 71
    LT              shift and go to state 72
    LTE             shift and go to state 73
    PLUS            shift and go to state 45
    MINUS           shift and go to state 46

    relation                       shift and go to state 68
    addOperator                    shift and go to state 58

state 52

    (11) procedureDeclare -> PROCEDURE ID LPAREN parameter . RPAREN BEGIN block END SEMMICOLOM procedureDeclare
    (14) parameter -> parameter . COMMA factor

    RPAREN          shift and go to state 74
    COMMA           shift and go to state 75


state 53

    (13) parameter -> factor .

    RPAREN          reduce using rule 13 (parameter -> factor .)
    COMMA           reduce using rule 13 (parameter -> factor .)


state 54

    (15) parameter -> empty .

    RPAREN          reduce using rule 15 (parameter -> empty .)
    COMMA           reduce using rule 15 (parameter -> empty .)


state 55

    (10) varDeclareList -> varDeclareList COMMA ID ASSIGN . NUMBER

    NUMBER          shift and go to state 76


state 56

    (16) statement -> CALL ID LPAREN parameter . RPAREN SEMMICOLOM statement
    (14) parameter -> parameter . COMMA factor

    RPAREN          shift and go to state 77
    COMMA           shift and go to state 75


state 57

    (17) statement -> ID ASSIGN expression SEMMICOLOM . statement
    (16) statement -> . CALL ID LPAREN parameter RPAREN SEMMICOLOM statement
    (17) statement -> . ID ASSIGN expression SEMMICOLOM statement
    (18) statement -> . empty
    (19) statement -> . FOR NUMBER LOOPS statement END SEMMICOLOM statement
    (20) statement -> . CASE caseList ELSE statement END SEMMICOLOM statement
    (21) statement -> . ID ASSIGN CALL ID LPAREN parameter RPAREN SEMMICOLOM statement
    (42) empty -> .

    CALL            shift and go to state 18
    ID              shift and go to state 19
    FOR             shift and go to state 21
    CASE            shift and go to state 22
    $end            reduce using rule 42 (empty -> .)
    END             reduce using rule 42 (empty -> .)
    WHEN            reduce using rule 42 (empty -> .)
    ELSE            reduce using rule 42 (empty -> .)

    statement                      shift and go to state 78
    empty                          shift and go to state 20

state 58
